<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <TextView
        android:id="@+id/edit_label_tv"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/detail_payment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/payment_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        style="@style/TextSmall"
        android:textColor="@color/background"
        android:padding="5dp"
        android:background="@color/gift"
        app:layout_constraintEnd_toEndOf="@+id/edit_label_tv"
        app:layout_constraintStart_toStartOf="@+id/edit_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_label_tv" />

    <TextView
        android:id="@+id/payment_location_tv"
        style="@style/TextLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_category_tv" />

    <TextView
        android:id="@+id/payment_date_tv"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:text=""
        android:textColor="@color/text_alpha"
        app:layout_constraintEnd_toEndOf="@+id/payment_amount_tv"
        app:layout_constraintTop_toBottomOf="@+id/payment_amount_tv" />

    <TextView
        android:id="@+id/payment_amount_tv"
        style="@style/TextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_location_tv" />

    <ImageView
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_edit"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/delete_btn"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintTop_toTopOf="@+id/delete_btn"
        android:contentDescription="@string/edit_description" />

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:padding="5dp"
        android:src="@drawable/ic_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_date_tv"
        android:contentDescription="@string/trash_description" />

</androidx.constraintlayout.widget.ConstraintLayout>